# TNCG15-ray-tracer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Box.h  Camera.h  ColorDouble.h  Direction.h  Light.h  Pixel.h  Ray.h  RayTracer.h  Scene.h  SceneObject.h  Sphere.h  Surface.h  Triangle.h  definitions.h  utilities.h
src/: Box.cpp  Camera.cpp  ColorDouble.cpp  Light.cpp  Pixel.cpp  Ray.cpp  RayTracer.cpp  Scene.cpp  Sphere.cpp  Surface.cpp  Triangle.cpp  main.cpp  utilities.cpp
